tests/gql/snapshots/gql__snapshots__error_empty_query.snap
---
source: tests/gql/snapshots.rs
expression: "format!(\"{}\", err)"
---
"Syntax error:  --> 1:1\n  |\n1 | \n  | ^---\n  |\n  = expected statement"
