tests/gql/snapshots/gql__snapshots__parse_alter_edge_type_drop_property_snapshot.snap
---
source: tests/gql/snapshots.rs
expression: stmt
---
Ddl:
  AlterEdgeType:
    name: KNOWS
    action:
      DropProperty: notes
