tests/gql/snapshots/gql__snapshots__parse_alter_node_type_add_property_snapshot.snap
---
source: tests/gql/snapshots.rs
expression: stmt
---
Ddl:
  AlterNodeType:
    name: Person
    action:
      AddProperty:
        name: bio
        prop_type: String
        required: false
        default: ~
