tests/gql/snapshots/gql__snapshots__parse_alter_node_type_drop_property_snapshot.snap
---
source: tests/gql/snapshots.rs
expression: stmt
---
Ddl:
  AlterNodeType:
    name: Person
    action:
      DropProperty: bio
