tests/gql/snapshots/gql__snapshots__parse_count_distinct_snapshot.snap
---
source: tests/gql/snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: n
            labels:
              - Person
            properties: []
            where_clause: ~
optional_match_clauses: []
with_path_clause: ~
unwind_clauses: []
where_clause: ~
call_clauses: []
let_clauses: []
with_clauses: []
return_clause:
  distinct: false
  items:
    - expression:
        Aggregate:
          func: Count
          distinct: true
          expr:
            Property:
              variable: n
              property: city
      alias: ~
group_by_clause: ~
having_clause: ~
order_clause: ~
limit_clause: ~
